[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/jamcountdown/countdown.gd" type="Script" id=1]
[ext_resource path="res://addons/jamcountdown/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/jamcountdown/Roboto-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/jamcountdown/element_theme.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=3]
size = 15
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="Countdown" type="PanelContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -198.0
margin_bottom = 24.0
grow_horizontal = 0
size_flags_horizontal = 5
size_flags_vertical = 5
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 1.0
margin_right = 201.0
margin_bottom = 23.0
grow_horizontal = 0
size_flags_horizontal = 5
size_flags_vertical = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="HBoxContainer"]
margin_right = 68.0
margin_bottom = 22.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "GameJam"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownLabel" type="Label" parent="HBoxContainer"]
margin_left = 72.0
margin_right = 196.0
margin_bottom = 22.0
grow_horizontal = 0
size_flags_horizontal = 5
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "07d 20h 59m 52s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
